DDD structure setting & rdb setting (JPA)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,16 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
+
+spring.datasource.user.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.user.jdbc-url=jdbc:mariadb://mylifeis123.synology.me:3306/user?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.user.username=developer
+spring.datasource.user.password=Roqkfgkqtlek12345!@
+
+spring.datasource.message.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.message.jdbc-url=jdbc:mariadb://mylifeis123.synology.me:3306/user?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.message.username=developer
+spring.datasource.message.password=Roqkfgkqtlek12345!@
+
+spring.jpa.show-sql=true 
+spring.jpa.properties.hibernate.format_sql=true
