--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,13 @@ dependencies {
 	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
+
+	compileOnly 'org.projectlombok:lombok:1.18.24'
+
+	annotationProcessor('org.projectlombok:lombok')
+	testAnnotationProcessor('org.projectlombok:lombok')
+
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
