--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.web.resources.static-locations=classpath:static/
+
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
