--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.web.resources.static-locations=classpath:static/
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 
 spring.datasource.user.driverClassName=org.mariadb.jdbc.Driver
